--- a/src/main/resources/templates/productos/show.html
+++ b/src/main/resources/templates/productos/show.html
@@ -1,27 +1,3 @@
-<!DOCTYPE html>
-<html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:titles="http://www.thymeleaf.org">
-
-<head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>Spring eCommerce</title>
-
-
-  <!-- Bootstrap core CSS -->
-  <link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
-  
-  <!-- Custom styles for this template -->
-  <link th:href="@{/css/heroic-features.css}" rel="stylesheet">
-
-
-</head>
-
-<body>
-
   <!-- Navigation -->
   <div th:include="/administrador/template_admin.html::header"> </div>
 
@@ -39,7 +15,7 @@
     <li class="breadcrumb-item active">Ver Productos</li>
   </ol>
 
-  <a class="btn btn-primary" href="#" > Crear Producto</a>
+  <a class="btn btn-primary" th:href="@{/productos/crear}" > Crear Producto</a>
   <h2>Productos</h2>
   <table class="table">
     <thead>
@@ -70,10 +46,4 @@
 <!-- Footer -->
  <div th:include="/administrador/template_admin.html::footer"></div>
 
-    <!-- Bootstrap core JavaScript -->
-    <script th:src="@{vendor/jquery/jquery.min.js}"></script>
-    <script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
-
-</body>
-
-</html>
+   
