--- a/src/main/resources/templates/administrador/template_admin.html
+++ b/src/main/resources/templates/administrador/template_admin.html
@@ -45,7 +45,7 @@
 	       <li class="nav-item dropdown">
 	       			<a	
 	       			class="nav-link dropdown-toggle"
-	       			href="#"id="navbarDropdownMenuLink"
+	       			th:href="@{/administrador}"id="navbarDropdownMenuLink"
 	       			role="button"
 	       			data-toggle="dropdown"
 	       			aria-haspopup="true"
