--- a/src/main/resources/templates/productos/show.html
+++ b/src/main/resources/templates/productos/show.html
@@ -11,8 +11,9 @@
   </h1>
 
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+    <li class="breadcrumb-item"><a th:href="@{/administrador}">Home</a></li>
     <li class="breadcrumb-item active">Ver Productos</li>
+    <li class="breadcrumb-item">Ver Detalles</li>
   </ol>
 
   <a class="btn btn-primary" th:href="@{/productos/crear}" > Crear Producto</a>
@@ -34,7 +35,7 @@
          <td th:text="${producto.descripcion}" ></td>
          <td th:text="${producto.cantidad}" ></td>
           <td th:text="${producto.precio}" ></td>
-        <td><a  class="btn btn-warning" href="">Editar</a> </td>
+        <td><a  class="btn btn-warning" th:href="@{/productos/edit/{id} (id=${producto.id})}">Editar</a> </td>
         <td><a  class="btn btn-danger" href="">Eliminar</a> </td>
       </tr>       
     </tbody>
