Agregando diseño a vista usuarios

--- a/src/main/resources/templates/usuario/carrito.html
+++ b/src/main/resources/templates/usuario/carrito.html
@@ -4,11 +4,9 @@
 
     <!-- Page Content -->
     <div class="container">
-
-
       <!-- Page Heading/Breadcrumbs -->
-      <h1 class="mt-4 mb-3">
-        Spring eCommerce <small>Carrito</small>
+      <h1 class="mt-4 mb-3 p-3">
+        Tortas July <small>Carrito</small>
       </h1>
 
       <ol class="breadcrumb">
@@ -56,6 +54,7 @@
       </div>
     </div>
     <!-- /.container -->
+    </div>
 
   
-<div th:include="/usuario/template_usuario.html::footer"></div>
+	<div th:include="/usuario/template_usuario.html::footer"></div>
