--- a/src/main/resources/templates/usuario/resumenorden.html
+++ b/src/main/resources/templates/usuario/resumenorden.html
@@ -5,9 +5,12 @@
 
 
       <!-- Page Heading/Breadcrumbs -->
-      <h1 class="mt-4 mb-3">
-        Spring eCommerce <small>Resumen de la orden</small>
+      <h1 class="mt-4 mb-3 p-3">
+       Pedido casi listo  <small>Resumen de la orden
+      </small>
+      <i class="fa-light fa-face-grin-beam"></i>
       </h1>
+      
 
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
@@ -67,6 +70,7 @@
       </div>
     </div>
   </div>
+    </div>
   <!-- /.container -->
 
       <div th:include="/usuario/template_usuario.html::footer"></div>
