--- a/src/main/resources/templates/usuario/template_usuario.html
+++ b/src/main/resources/templates/usuario/template_usuario.html
@@ -8,12 +8,13 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Spring eCommerce</title>
+  <title>Tortas July Sullana</title>
 
-
+<link rel="icon" href="/images/Logo.ico">
   <!-- Bootstrap core CSS -->
-  <link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
-  
+<!--  <link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">-->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
   <!-- Custom styles for this template -->
   <link th:href="@{/css/heroic-features.css}" rel="stylesheet">
 
@@ -23,22 +24,22 @@
 <body>
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-      <a class="navbar-brand" th:href="@{/}">Spring eCommerce</a>
+    <div class="container-fluid">
+      <a class="navbar-brand" th:href="@{/}">Tortas July Sullana</a>
 
-      <form class="form-inline my-2 my-lg-0" method="post"
+      <form class="d-flex my-1 my-lg-3" method="post"
       action="#">
-      <input class="form-control mr-sm-2" type="search"
+      <input class="form-control mr-sm-2 ml-3 p-1 m-1" type="search"
       placeholder="Buscar" aria-label="Search" name="nombre"
       autocomplete="off">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
     </form>
 
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
+    <div class="collapse navbar-collapse text-end justify-content-end" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item"><a class="nav-link"
           th:href="@{/getCart}">Carrito</a></li>
@@ -56,19 +57,60 @@
     <!-- /.container -->
   	<div th:fragment="footer">
 	 <!-- Footer -->
-	    <footer class="py-5 bg-dark">
-	      <div class="container">
-	        <p class="m-0 text-center text-white">Copyright &copy; Spring eCommerce 2022</p>
-	      </div>
-	      <!-- /.container -->
-	    </footer>
-	
+		<footer class=" container-fluid bg-dark text-center text-white p-3">
+			  <!-- Grid container -->
+			  <div class="container p-4 pb-0">
+			    <!-- Section: Social media -->
+			    <section class="mb-4">
+			      <!-- Facebook -->
+			      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+			        ><i class="fab fa-facebook-f"></i
+			      ></a>
+			
+			      <!-- Twitter -->
+			      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+			        ><i class="fab fa-twitter"></i
+			      ></a>
+			
+			      <!-- Google -->
+			      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+			        ><i class="fab fa-google"></i
+			      ></a>
+			
+			      <!-- Instagram -->
+			      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+			        ><i class="fab fa-instagram"></i
+			      ></a>
+			
+			      <!-- Linkedin -->
+			      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+			        ><i class="fab fa-linkedin-in"></i
+			      ></a>
+			
+			      <!-- Github -->
+			      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+			        ><i class="fab fa-github"></i
+			      ></a>
+			    </section>
+			    <!-- Section: Social media -->
+			  </div>
+			  <!-- Grid container -->
+			
+			  <!-- Copyright -->
+			  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+			    © 2022 Copyright:
+			    <a class="text-white" href="https://www.facebook.com/TortasConDisenoJuly/">TortasJulySullana.com</a>
+			  </div>
+			  <!-- Copyright -->
+			</footer>
 	
    
 
     <!-- Bootstrap core JavaScript -->
-    <script th:src="@{vendor/jquery/jquery.min.js}"></script>
-    <script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+  <!--  <script th:src="@{vendor/jquery/jquery.min.js}"></script>
+    <script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>-->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
   </body>
 
