--- a/src/main/resources/templates/usuario/template_usuario.html
+++ b/src/main/resources/templates/usuario/template_usuario.html
@@ -57,13 +57,13 @@
     <!-- /.container -->
   	<div th:fragment="footer">
 	 <!-- Footer -->
-		<footer class=" container-fluid bg-dark text-center text-white p-3">
+		<footer class=" container-fluid bg-dark align-items-end text-center text-white p-3">
 			  <!-- Grid container -->
 			  <div class="container p-4 pb-0">
 			    <!-- Section: Social media -->
 			    <section class="mb-4">
 			      <!-- Facebook -->
-			      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+			      <a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/TortasConDisenoJuly/" role="button"
 			        ><i class="fab fa-facebook-f"></i
 			      ></a>
 			
@@ -73,12 +73,12 @@
 			      ></a>
 			
 			      <!-- Google -->
-			      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+			      <a class="btn btn-outline-light btn-floating m-1" href="https://tortas-july-sullana.negocio.site/" role="button"
 			        ><i class="fab fa-google"></i
 			      ></a>
 			
 			      <!-- Instagram -->
-			      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+			      <a class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/tortas_july_sullana/?hl=es-la" role="button"
 			        ><i class="fab fa-instagram"></i
 			      ></a>
 			
@@ -97,9 +97,11 @@
 			  <!-- Grid container -->
 			
 			  <!-- Copyright -->
-			  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-			    © 2022 Copyright:
-			    <a class="text-white" href="https://www.facebook.com/TortasConDisenoJuly/">TortasJulySullana.com</a>
+			  <div class="container justify-content-center">
+				  <div class="text-center p-1" style="background-color: rgba(0, 0, 0, 0.2);">
+				    © 2022 Copyright:
+				    <a class="text-white" href="https://www.facebook.com/TortasConDisenoJuly/">TortasJulySullana.com</a>
+				  </div>
 			  </div>
 			  <!-- Copyright -->
 			</footer>
